Header: Fix header & nav issues on small screens (#401)
* Header: Fix logo spacing on default English site

Fixes issue introduced in https://github.com/WordPress/wporg-mu-plugins/commit/43a8a94a4de8cd16ac2b079c9eeb70eb71146a1d where the menu & search icons collapsed to the left on small screens. The logo flex size needs to be different when there is no locale name.

* Header: Only apply page scroll fix to header modals

This prevents other nav modals (like the page subnav) which toggle the has-modal-open class from affecting the position of the global header bar.

See #392, Fixes https://github.com/WordPress/wporg-parent-2021/issues/85

--- a/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
@@ -95,3 +95,11 @@
 		}
 	}
 }
+
+/* When on the main (non-rosetta) sites, the logo should take over 100% space. */
+html[lang="en-US"] .wp-block-group.global-header .wp-block-image.global-header__wporg-logo-mark {
+
+	@media (--mobile-only) {
+		flex-basis: 100%;
+	}
+}
